syntax = "proto3";

option go_package = "github.com/JonasSkjodt/chitty-chat/proto";

package proto;

// compile command: (run from /chitty-chat/)
// USE THIS AFTER YOU ALTER AND SAVE THE PROTO FILE
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/template.proto

/*
The Client: go run .\client\client.go
The Server: go run .\server\server.go

go run .\client\ alice
*/

service Chat {
    rpc MessageStream(stream ChatMessage) returns (stream ChatMessage);
    rpc ConnectToServer(stream ChatMessage) returns (Ack);
    rpc DisconnectFromServer(ClientName) returns (Ack);
}


message Ack {
    string message = 1;
}

message ChatMessage {
    string clientName = 1;
    string content = 2;
    int64 timestamp = 3;
}

message ClientName {
    string clientName = 1;
}

message ClientID {
    int32 clientID = 1;
}

